Show checkout form when Buy Now is clicked

--- a/ballsackblud.html
+++ b/ballsackblud.html
@@ -4978,6 +4978,7 @@ For support, contact: support@atlasfn.com
       // Scroll to the store/payment section
       const storeView = document.getElementById('store-view');
       if (storeView) {
+        storeView.style.display = 'block';
         storeView.scrollIntoView({ behavior: 'smooth', block: 'start' });
       }
       
