--- a/panel.html
+++ b/panel.html
@@ -13,9 +13,9 @@
     }
 
     body {
-      font-family: 'gg sans', 'Noto Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-      background: #313338;
-      color: #dbdee1;
+      font-family: 'Sora', 'gg sans', 'Noto Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+      background: #0f0f11;
+      color: #e0e0e0;
       height: 100vh;
       overflow: hidden;
     }
@@ -37,8 +37,9 @@
       align-items: center;
       justify-content: space-between;
       padding: 0 1rem;
-      border-bottom: 1px solid #000;
+      border-bottom: 1px solid rgba(168, 85, 247, 0.2);
       z-index: 100;
+      box-shadow: 0 2px 8px rgba(168, 85, 247, 0.1);
     }
 
     .top-bar-left {
@@ -70,6 +71,7 @@
       font-size: 1rem;
       font-weight: 600;
       color: #f2f3f5;
+      text-shadow: 0 0 10px rgba(168, 85, 247, 0.3);
     }
 
     .top-bar-right {
@@ -90,23 +92,23 @@
     }
 
     .top-icon:hover {
-      color: #dbdee1;
+      color: #a855f7;
     }
 
     /* Sidebar */
     .sidebar {
       width: 240px;
-      background: #2b2d31;
+      background: #16161a;
       padding-top: 48px;
       height: 100vh;
       display: flex;
       flex-direction: column;
-      border-right: 1px solid #1e1f22;
+      border-right: 1px solid #2a2a32;
     }
 
     .user-info {
       padding: 1.5rem;
-      border-bottom: 1px solid #1e1f22;
+      border-bottom: 1px solid #2a2a32;
     }
 
     .user-header {
@@ -120,13 +122,14 @@
       width: 48px;
       height: 48px;
       border-radius: 50%;
-      background: linear-gradient(135deg, #5865f2, #a855f7);
+      background: linear-gradient(135deg, #a855f7, #d946ef);
       display: flex;
       align-items: center;
       justify-content: center;
       font-size: 1.5rem;
       font-weight: 600;
       color: #fff;
+      box-shadow: 0 0 15px rgba(168, 85, 247, 0.5);
     }
 
     .user-details h3 {
@@ -144,12 +147,13 @@
     .user-role {
       display: inline-block;
       padding: 0.25rem 0.5rem;
-      background: rgba(88, 101, 242, 0.15);
-      color: #5865f2;
+      background: rgba(168, 85, 247, 0.15);
+      color: #a855f7;
       border-radius: 4px;
       font-size: 0.75rem;
       font-weight: 600;
       margin-top: 0.5rem;
+      border: 1px solid rgba(168, 85, 247, 0.3);
     }
 
     .user-id {
@@ -188,13 +192,15 @@
     }
 
     .action-btn:hover {
-      background: #404249;
+      background: rgba(168, 85, 247, 0.12);
       color: #dbdee1;
     }
 
     .action-btn.active {
-      background: #404249;
-      color: #f2f3f5;
+      background: rgba(168, 85, 247, 0.2);
+      color: #a855f7;
+      border-left: 3px solid #a855f7;
+      padding-left: calc(0.75rem - 3px);
     }
 
     /* Main Content */
@@ -203,13 +209,13 @@
       padding-top: 48px;
       height: 100vh;
       overflow-y: auto;
-      background: #313338;
+      background: #0f0f11;
     }
 
     .content-header {
       padding: 1.5rem;
-      border-bottom: 1px solid #1e1f22;
-      background: #2b2d31;
+      border-bottom: 1px solid #2a2a32;
+      background: #16161a;
     }
 
     .content-header h2 {
@@ -229,7 +235,7 @@
     }
 
     .log-item {
-      background: #2b2d31;
+      background: #16161a;
       border-radius: 4px;
       padding: 1rem;
       margin-bottom: 0.5rem;
@@ -237,10 +243,12 @@
       align-items: flex-start;
       gap: 0.75rem;
       transition: background 0.15s;
+      border: 1px solid #2a2a32;
     }
 
     .log-item:hover {
       background: #1e1f22;
+      border-color: rgba(168, 85, 247, 0.3);
     }
 
     .log-icon {
@@ -257,7 +265,7 @@
     .log-icon.joined { background: rgba(35, 165, 90, 0.15); color: #23a55a; }
     .log-icon.left { background: rgba(242, 63, 67, 0.15); color: #f23f43; }
     .log-icon.kicked { background: rgba(250, 166, 26, 0.15); color: #faa61a; }
-    .log-icon.chatted { background: rgba(88, 101, 242, 0.15); color: #5865f2; }
+    .log-icon.chatted { background: rgba(168, 85, 247, 0.15); color: #a855f7; }
     .log-icon.reset { background: rgba(148, 155, 164, 0.15); color: #949ba4; }
 
     .log-content {
@@ -277,23 +285,24 @@
     }
 
     .log-user {
-      color: #00a8fc;
+      color: #a855f7;
       font-weight: 600;
+      text-shadow: 0 0 10px rgba(168, 85, 247, 0.3);
     }
 
     /* Right Panel */
     .right-panel {
       width: 300px;
-      background: #2b2d31;
+      background: #16161a;
       padding-top: 48px;
       height: 100vh;
       overflow-y: auto;
-      border-left: 1px solid #1e1f22;
+      border-left: 1px solid #2a2a32;
     }
 
     .right-panel-section {
       padding: 1rem;
-      border-bottom: 1px solid #1e1f22;
+      border-bottom: 1px solid #2a2a32;
     }
 
     .right-panel-section h3 {
@@ -317,14 +326,14 @@
     }
 
     .user-list-item:hover {
-      background: #313338;
+      background: rgba(168, 85, 247, 0.08);
     }
 
     .user-mini-avatar {
       width: 32px;
       height: 32px;
       border-radius: 50%;
-      background: linear-gradient(135deg, #5865f2, #a855f7);
+      background: linear-gradient(135deg, #a855f7, #d946ef);
       display: flex;
       align-items: center;
       justify-content: center;
@@ -339,7 +348,7 @@
       height: 10px;
       border-radius: 50%;
       background: #23a55a;
-      border: 2px solid #2b2d31;
+      border: 2px solid #16161a;
       position: absolute;
       bottom: -2px;
       right: -2px;
@@ -361,16 +370,16 @@
     }
 
     ::-webkit-scrollbar-track {
-      background: #2b2d31;
+      background: #16161a;
     }
 
     ::-webkit-scrollbar-thumb {
-      background: #1e1f22;
+      background: #2a2a32;
       border-radius: 4px;
     }
 
     ::-webkit-scrollbar-thumb:hover {
-      background: #404249;
+      background: #a855f7;
     }
   </style>
 </head>
